--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "hardhat": "^2.26.0",
     "hardhat-deploy": "^0.12.4",
     "hardhat-deploy-ethers": "^0.4.2"
+  },
+  "dependencies": {
+    "dotenv": "^17.2.1"
   }
 }
